# monsieurcc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
mcc_api/: Cargo.toml
mcc_api/src/: api.rs  lib.rs  schemas.rs
mcc_api/testdata/: recipe_ids.json  versions.txt
mcc_cli/: Cargo.toml
mcc_cli/src/: main.rs
mcc_server/: Cargo.toml  Rocket.toml  build.rs
mcc_server/frontend/: package-lock.json  package.json
mcc_server/frontend/src/: App.css  App.tsx  http-common.ts
mcc_server/frontend/src/components/: AddRecipe.tsx  Recipe.tsx  RecipesList.tsx
mcc_server/frontend/src/services/: RecipeService.ts
mcc_server/frontend/src/types/: Recipe.ts
mcc_server/migrations/2021-10-07-012028_initialization/: down.sql  up.sql
mcc_server/migrations/2021-10-15-190259_add_recipe_metadata/: down.sql  up.sql
mcc_server/recipe_images/: _create_dummy.sh
mcc_server/src/: admin.rs  db.rs  frontend.rs  guard.rs  images.rs  main.rs  mcc.rs  schema.rs  utils.rs
src/: api.rs  lib.rs  schemas.rs
testdata/: recipe_all_default.json  recipe_single_25011.json
