[package]
name = "mcc_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
http = "0.2.5"
mockito = "0.30.0"
rstest = "0.11"
tokio = { version = "1", features = ["macros"] }