[package]
name = "mcc_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monsieurcc = { path = "../" }
structopt = "0.3.23"
anyhow = "1.0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
