[package]
name = "mcc_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monsieurcc = { path = "../" }
serde = { version = "1", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
diesel = { version = "1.3", features = ["sqlite"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]