[package]
name = "mcc_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monsieurcc = { path = "../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
diesel = { version = "1.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
# Auto cross-compile libsqlite3 and openssl when target is android
openssl = { version = "0.10", features = ["vendored"] }
# Need to keep sqlite version in-sync with diesel package
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
